--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="speed">
+        <label>Selecione a velocidade</label>
+        <select id="speed" onchange="changeSpeed()">
+            <option value='1'>1x</option>
+            <option value='2'>2x</option>
+            <option value='3'>3x</option>
+            <option value='4'>4x</option>
+            <option value='5'>5x</option>
+        </select>
+    </div>
     <div class="wrapper">
         <h1 id="watch">00:00:00</h1>
         <div class="botoes">
