--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <div class="wrapper">
         <h1 id="watch">00:00:00</h1>
         <div class="botoes">
-            <button class="start-btn" onclick="start()">Iniciar</button>
-            <button class="pause-btn" onclick="pause()">Pausar</button>
-            <button class="stop-btn"  onclick="stop()">Parar</button>
+            <button class="start-btn" id="start" onclick="start()">Iniciar</button>
         </div>
     </div>
     <script src="js/index.js"></script>
