Altera cores e adiciona mario

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <button class="start-btn" id="start" onclick="start()">Iniciar</button>
         </div>
     </div>
+    <div height='100'>
+        <img src='img/mario.gif' class='marioimg' height='100'>
+    </div>
+    <script src="https://kit.fontawesome.com/af273e6fcf.js" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
